tests/macros/raw_select/validate.stderr
error: option `validate` does not exist for kind `raw_select`
 --> $DIR/validate.rs:2:49
  |
2 |     let q = inquisition::questions![RawSelect { validate: todo!() }];
  |                                                 ^^^^^^^^
