tests/macros/raw_select/validate.rs
fn main() {
    let q = inquisition::questions![RawSelect { validate: todo!() }];
}
